--- a/AddedValue/Interface/Interface/nbproject/project.properties
+++ b/AddedValue/Interface/Interface/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pkginterface.Interface
+main.class=pkginterface.GUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
